fixed dark mode again

--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkerGray;
+  color: var(--main-text-color);
   font-weight: bold;
 
   line-height: 1.7;
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 30px;
   a {
-    color: inherit;
+    color: var(--main-text-color);
   }
 }
 
@@ -74,7 +74,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  color: var(--main-text-color);
 }
 
 p {
@@ -82,7 +82,7 @@ p {
 }
 
 a {
-  color: $blue;
+  color: var(--link-color);
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
@@ -130,7 +130,7 @@ img {
 
 .date {
   font-style: italic;
-  color: $gray;
+  color: var(--main-text-color);
 }
 
 // Specify the color of the selection
@@ -205,7 +205,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: var(--main-text-color);
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
@@ -215,7 +215,7 @@ img {
 
 .site-description {
   margin: -5px 0 0 0;
-  color: $gray;
+  color: var(--main-text-color);
   font-size: 16px;
 
   @include mobile {
@@ -238,7 +238,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: var(--link-color);
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
